--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,14 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["prettier", "xo"],
+  "extends": ["xo", "prettier"],
   "overrides": [
     {
       "extends": ["xo-typescript", "prettier"],
-      "files": ["*.ts", "*.tsx"]
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/consistent-type-definitions": ["error", "interface"]
+      }
     }
   ],
   "parserOptions": {
