--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "prepare": "husky install",
     "build": "npx tsc",
-    "build:dev": "npx tsc -w"
+    "build:dev": "npx tsc -w",
+    "test": "jest",
+    "test:dev": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,7 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
     "husky": "^8.0.0",
+    "jest": "^29.6.2",
     "typescript": "^5.1.6"
   }
 }
